[project]
name = "moocscript"
version = "0.1.0"
description = "Python implementation of mooc-helper core API request logic"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "markdown>=3.4.0",
    "python-docx>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moocscript"]
